codepkg/objects/University__c.object
<CustomObject>
    <fields>
        <fullName>Count_of_Students__c</fullName>
        <label>Count of Students</label>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Workers__c</fullName>
        <label>Count of Workers</label>
        <summaryForeignKey>Worker__c.University__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <formula>Sum_of_Pays__c -  Sum_of_Salarys__c -  Sum_of_Grants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rector_of_University__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rector  of University</label>
        <referenceTo>Worker__c</referenceTo>
        <relationshipLabel>Universitys</relationshipLabel>
        <relationshipName>Universitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sum_of_Grants__c</fullName>
        <label>Sum of Grants</label>
        <summarizedField>Student__c.Grants__c</summarizedField>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Pays__c</fullName>
        <label>Sum of Pays</label>
        <summarizedField>Student__c.Pay__c</summarizedField>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Salarys__c</fullName>
        <label>Sum of Salarys</label>
        <summarizedField>Worker__c.Salary__c</summarizedField>
        <summaryForeignKey>Worker__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>University</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>University Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Universitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>